--- a/main.html
+++ b/main.html
@@ -7,8 +7,68 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<h1>HTML Assignment #3</h1>
+<table id="table-1" class="middle" >
+	<tr>
+		<td id="t11">left</td>
+		<td id="t12" class="centre">centre</td>
+		<td id="t13" class="right">right</td>
+	</tr>
+	<tr>
+		<td>left</td>
+		<td class="centre">centre</td>
+		<td class="right">right</td>
+	</tr>
+	<tr>
+		<td>left</td>
+		<td class="centre">centre</td>
+		<td class="right">right</td>
+	</tr>
+</table>    
+	<br>
+	<table id=table-2 class="middle">
+		<tr>
+			<td id="t21" colspan=6></td>
+			</tr>
+		<tr>
+			<td rowspan=3></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td colspan=3></td>
+			<td></td>
+			
+		</tr>
+		<tr>
+			<td></td>
+			<td rowspan=2 colspan=3></td>
+			<td></td>
+			
+		</tr>
+		<tr> 
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		</tr>
+		<tr>
+			<td colspan=6></td>
+			</tr>
+		
+	</table>
+	<table id="table=3" class=middle>
+		<tr></tr>
+		<tr><img src="https://user-images.githubusercontent.com/78348500/217435540-555a8eb0-79a6-4590-90c0-28b620341d42.png"</tr>
+		<tr></tr>
+		
+	</table>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
