--- a/main.html
+++ b/main.html
@@ -63,9 +63,9 @@
 		
 	</table>
 	<table id="table=3" class=middle>
-		<tr></tr>
-		<tr><img src="https://user-images.githubusercontent.com/78348500/217435540-555a8eb0-79a6-4590-90c0-28b620341d42.png"</tr>
-		<tr></tr>
+		
+		<tr><img id="table-3"src="https://user-images.githubusercontent.com/78348500/217435540-555a8eb0-79a6-4590-90c0-28b620341d42.png"</tr>
+		
 		
 	</table>
 	<script type="text/javascript" src="./script.js">
