--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
 			<td id="t21" colspan=6></td>
 			</tr>
 		<tr>
-			<td rowspan=3></td>
+			<td rowspan=4></td>
 			<td></td>
 			<td></td>
 			<td></td>
@@ -40,13 +40,13 @@
 		</tr>
 		<tr>
 			<td></td>
-			<td colspan=3></td>
+			<td colspan=3 rowspan=2></td>
 			<td></td>
 			
 		</tr>
 		<tr>
 			<td></td>
-			<td rowspan=2 colspan=3></td>
+		
 			<td></td>
 			
 		</tr>
@@ -63,8 +63,14 @@
 		
 	</table>
 	<table id="table=3" class=middle>
-		
-		<tr><img id="table-3"src="https://user-images.githubusercontent.com/78348500/217435540-555a8eb0-79a6-4590-90c0-28b620341d42.png"</tr>
+		<tr>
+			<td class=green></td>
+		</tr>
+		<tr>
+			<td><img id="table-3"src="https://www.simplilearn.com/ice9/free_resources_article_thumb/what_is_image_Processing.jpg"></td></tr>
+			<tr>
+			<td class=blue></td>
+		</tr>
 		
 		
 	</table>
