--- a/main.html
+++ b/main.html
@@ -67,7 +67,7 @@
 			<td class=green></td>
 		</tr>
 		<tr>
-			<td><img id="table-3"src="https://www.simplilearn.com/ice9/free_resources_article_thumb/what_is_image_Processing.jpg"></td></tr>
+			<td class="centre"><img id="t-image"src="https://www.simplilearn.com/ice9/free_resources_article_thumb/what_is_image_Processing.jpg" width=200></td></tr>
 			<tr>
 			<td class=blue></td>
 		</tr>
